--- a/Kurikulum/stylee.css
+++ b/Kurikulum/stylee.css
@@ -6,5 +6,46 @@
 }
 
 .container {
-  background-color: gray;
+  background-color: rgb(211, 211, 211);
+  height: auto;
+
+  display: flex;
+  gap: 5px;
+}
+
+.card {
+  background-color: rgb(255, 255, 255);
+  width: 150px;
+  height: 220px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid rgb(165, 165, 165);
+}
+
+.container-img {
+  background-color: yellow;
+  width: 130px;
+  height: 130px;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.description {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.description p {
+  font-size: 12px;
+  font-weight: 500px;
 }
