--- a/prjct.css/grid.css
+++ b/prjct.css/grid.css
@@ -1,48 +1,57 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  text-align: center;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
 }
 
-body {
-  height: 100vh;
+.container {
+  box-sizing: border-box;
+  border: 5px solid black;
+  padding: 5px;
+  margin: 50px auto;
+  width: 600px;
+
+  display: grid;
+  grid-template-areas: "header header" "aside main" "nav main" "footer footer";
+  grid-template-columns: 1fr 1.5fr;
+  grid-template-rows: 1fr 1fr 1.3fr;
 }
+
 header {
-  background: aqua;
-  height: 10%;
-  text-align: center;
-  align-content: center;
+  grid-area: header;
+  background-color: aqua;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 aside {
-  background: palevioletred;
-  display: block;
-  width: 40%;
-  height: 40%;
-  align-content: center;
-  text-align: center;
+  grid-area: aside;
+  background-color: yellow;
+  padding: 60px 0;
 }
+
 nav {
-  background: burlywood;
-  display: block;
-  width: 40%;
-  height: 40%;
-  align-content: center;
-  text-align: center;
+  grid-area: nav;
+  background-color: lightgreen;
+  padding: 100px 0;
 }
+
 main {
-  background: yellowgreen;
-  display: block;
-  width: 60%;
-  height: 80%;
-  float: right;
-  align-content: center;
-  text-align: center;
+  grid-area: main;
+  background-color: palevioletred;
+  box-sizing: border-box;
+  display: flex;
+  flex: 1.5;
+  justify-content: center;
+  align-items: center;
 }
+
 footer {
-  background: gray;
-  display: block;
-  height: 10%;
-  align-content: center;
-  text-align: center;
+  grid-area: footer;
+  background-color: gray;
+  padding: 20px 0;
 }
